--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "livewire/livewire": "^2.10",
         "maatwebsite/excel": "^3.1",
         "mediconesystems/livewire-datatables": "^0.9.5",
-        "psr/simple-cache": "2.0"
+        "psr/simple-cache": "2.0",
+        "pusher/pusher-php-server": "^7.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
