--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "maatwebsite/excel": "^3.1",
         "mediconesystems/livewire-datatables": "^0.9.5",
         "psr/simple-cache": "2.0",
-        "pusher/pusher-php-server": "^7.2"
+        "pusher/pusher-php-server": "^7.2",
+        "ramsey/uuid": "^4.6"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
