--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "vite": "^3.0.0"
     },
     "dependencies": {
-        "admin-lte": "3.2"
+        "admin-lte": "3.2",
+        "moment": "^2.29.4"
     }
 }
