--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "mediconesystems/livewire-datatables": "^0.9.5",
         "psr/simple-cache": "2.0",
         "pusher/pusher-php-server": "^7.2",
-        "ramsey/uuid": "^4.6"
+        "ramsey/uuid": "^4.6",
+        "wire-elements/modal": "^1.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
