implementasi datatable dari rappasoft

--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "psr/simple-cache": "2.0",
         "pusher/pusher-php-server": "^7.2",
         "ramsey/uuid": "^4.6",
+        "rappasoft/laravel-livewire-tables": "^2.8",
         "wire-elements/modal": "^1.0"
     },
     "require-dev": {
