--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "beyondcode/laravel-websockets": "^1.13",
         "diglactic/laravel-breadcrumbs": "^8.0",
         "guzzlehttp/guzzle": "^7.2",
+        "jenssegers/mongodb": "^3.9",
         "laravel/breeze": "^1.14",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
