--- a/.env
+++ b/.env
@@ -11,7 +11,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mongodb
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=db_eapd
+DB_DATABASE=mongodb_eapd
 DB_USERNAME=root
 DB_PASSWORD=
 
