--- a/.env
+++ b/.env
@@ -8,15 +8,22 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mongodb
+DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=mongodb_eapd
+DB_DATABASE=eapd_damkar
 DB_USERNAME=root
 DB_PASSWORD=
 
+# DB_CONNECTION=mongodb
+# DB_HOST=127.0.0.1
+# DB_PORT=3306
+# DB_DATABASE=mongodb_eapd
+# DB_USERNAME=root
+# DB_PASSWORD=
+
 #mongodb
-DB_DSN=mongodb://localhost:27017/
+# DB_DSN=mongodb://localhost:27017/
 
 BROADCAST_DRIVER=pusher
 CACHE_DRIVER=file
