--- a/package.json
+++ b/package.json
@@ -5,23 +5,21 @@
         "build": "vite build"
     },
     "devDependencies": {
-        "@tailwindcss/forms": "^0.5.2",
-        "alpinejs": "^3.4.2",
+        "@popperjs/core": "^2.11.6",
         "autoprefixer": "^10.4.13",
         "axios": "^1.1.2",
+        "bootstrap": "^5.2.3",
         "laravel-echo": "^1.14.1",
         "laravel-vite-plugin": "^0.6.0",
         "lodash": "^4.17.19",
         "postcss": "^8.4.18",
         "pusher-js": "^7.4.0",
         "sass": "^1.56.1",
-        "tailwindcss": "^3.2.1",
         "vite": "^3.0.0"
     },
     "dependencies": {
-        "@alpinejs/focus": "^3.10.5",
         "admin-lte": "3.2",
         "moment": "^2.29.4",
-        "sweetalert2": "^11.4.0"
+        "sweetalert2": "^11.7.28"
     }
 }
