--- a/storage/app/.gitignore
+++ b/storage/app/.gitignore
@@ -1,7 +1,7 @@
 /livewire-tmp
 /img/apd/input
 /img/apd/reupload
-/img/apd/item/*/*/*/*
+/img/apd/item/*/*/*/*/*/*
 /img/avatar/user
 /img/tes
 !.gitignore
