--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
     "private": true,
     "scripts": {
         "dev": "vite --host",
-        "build": "vite build"
+        "build": "vite build --mode production"
     },
     "devDependencies": {
         "@popperjs/core": "^2.11.6",
+        "@rollup/plugin-inject": "^5.0.5",
+        "adminlte": "^2.4.1",
         "autoprefixer": "^10.4.13",
         "axios": "^1.1.2",
         "bootstrap": "^5.2.3",
@@ -19,6 +21,7 @@
     },
     "dependencies": {
         "admin-lte": "3.2",
+        "jquery": "^3.7.1",
         "moment": "^2.29.4",
         "sweetalert2": "^11.10.1"
     }
