--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "beyondcode/laravel-websockets": "^1.13",
         "diglactic/laravel-breadcrumbs": "^8.0",
         "guzzlehttp/guzzle": "^7.2",
+        "intervention/image": "^3.3",
         "laravel/framework": "9.52.0",
         "laravel/tinker": "^2.7",
         "laravel/ui": "^4.2",
